<resources>
    <string name="app_name">Festivizer</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="default_leader">Default Leader</string>
    <string name="e_mail_or_username">E-mail or Username</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="phone">Phone</string>
    <string name="verify_password">Verify Password</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="festival">Festival</string>
    <string name="stat_time">Stat time</string>
    <string name="end_time">End time</string>
...
    <string name="duration">Duration</string>
    <string name="add_new_event">Add new event</string>
    <string name="events">Events</string>
    <string name="festival_profile">Festival profile</string>
    <string name="festival_creation">Festival creation</string>
    <string name="festival_logo">Festival Logo</string>
    <string name="create">Create</string>
    <string name="my_profile">My Profile</string>
    <string name="e_mail">E-Mail</string>
    <string name="festivals">Festivals</string>
    <string name="default_organizer">Default Organizer</string>
    <string name="default_festival">Default Festival</string>
    <string name="create_event">Create event</string>
    <string name="desc">Desc</string>
    <string name="job_abc_until_ending_n_h_min_sec">Job ABC, until ending:   1:25:32</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="my_events">My Events</string>
    <string name="completed">Completed</string>
    <string name="my_festivals">My Festivals</string>
...
    <string name="job_name">Job name</string>
    <string name="event_name">Event name</string>
    <string name="time_needed_to_complete">Time needed to complete</string>
    <string name="active_jobs">Active jobs</string>
    <string name="job_profile">Job profile</string>
    <string name="my_applications">My applications</string>
    <string name="create_new_festival">Create New Festival</string>
    <string name="add_specialization">Add Specialization</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="end_day">End Day</string>
    <string name="end_month">End Month</string>
    <string name="end_year">End Year</string>
...
    <string name="end_minutes">End Minutes</string>
    <string name="start_day">Start Day</string>
    <string name="start_month">Start Month</string>
    <string name="start_year">Start Year</string>
    <string name="start_hour">Start Hour</string>
    <string name="start_minutes">Start Minutes</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="default_my_stuff">My stuffs list</string>
    <string name="default_list_atom">Something mine</string>
    <string name="default_role">My role</string>
    <string name="search_specializations">Search Specializations</string>
    <string name="extend">Extend</string>
    <string name="num_of_people">Num Of People</string>
...
