...
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/default_profile_picture" />

        <!--  Username Label -->
        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:inputType="textCapWords" />

        <!-- Email Label -->
        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email" />

        <!-- Password Label -->
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"/>

        <!-- Verify Password Label -->
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Verify Password"
            android:inputType="textPassword" />

        <!-- Phone Label -->
        <EditText android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="Phone" />

        <!-- Name Label -->
        <EditText android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Name" />

        <!-- Surname Label -->
        <EditText android:id="@+id/input_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Surname" />

        <!-- Role dropdown list -->
        <Spinner
            android:id="@+id/roleChooser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:padding="12dp"
            android:text="Create Account"
...
