...
                android:ems="10"
                android:inputType="date"
                android:hint="@string/start_date"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/startDatebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date" />

        </LinearLayout>
...
                android:ems="10"
                android:inputType="time"
                android:hint="@string/start_time"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/startTimebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_time" />
        </LinearLayout>

...
                android:ems="10"
                android:inputType="date"
                android:hint="@string/end_date"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/endDatebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date" />

        </LinearLayout>
...
                android:ems="10"
                android:inputType="time"
                android:hint="@string/end_time"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/endTimebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/createBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create" />
        </LinearLayout>

...
